# osgverse

./: .gitignore  CMakeLists.txt  HANDOFF.md
.playwright-mcp/: page-2026-07-01T15-02-26-835Z.yml  page-2026-07-01T15-02-54-367Z.yml  page-2026-07-01T15-03-14-983Z.yml  page-2026-07-01T16-55-34-081Z.yml  page-2026-07-01T16-58-52-515Z.yml  page-2026-07-01T16-59-10-019Z.yml
applications/earth_explorer/: CMakeLists.txt  EarthControlUI.h  LayerManager.h  ai_cards.cpp  ai_cards.h  ai_chat.cpp  ai_chat.h  ai_media.cpp  ai_media.h  ai_motion.h  ai_setup.cpp  ai_setup.h  ai_tools.h  ai_ui.cpp  ai_ui.h  earth_main.cpp  flight_data.cpp  flight_data.h  precip_data.cpp  precip_data.h  quake_data.cpp  quake_data.h  render_effects.cpp  tiles3d_data.cpp  tiles3d_data.h
applications/earth_explorer/test/: ai_fake_chart.json  ai_fake_chart_multi.json  ai_fake_flights.json  ai_fake_flyto.json  ai_fake_photo.json  ai_fake_photo2.json  ai_fake_quakes.json  ai_fake_video.json  flights_fixture.json  gen_hk_3dtiles_fixture.py  gen_hk_flat_dem.py  quakes_fixture.geojson  quakes_summary_fixture.geojson  weather_maps_fixture.json
applications/earth_explorer/test/hk_single_tile_fixture/: F_Tile_+4_5_0+R9_0.b3dm  tileset.json
assets/shaders/: scattering_globe.frag.glsl
docs/: EarthExplorer.md
modeling/: Math.cpp
packaging/: package_macos.sh  run.sh
pipeline/: UtilitiesEx.cpp
readerwriter/: EarthManipulator.cpp  EarthManipulator.h  SolarPosition.h  TileCallback.cpp  TileCallback.h  UtilitiesEx.cpp
tasks/: lessons.md
tests/: CMakeLists.txt  ai_chat_tests.cpp
(+25 files in other folders)
